fixed line wrapping for users name in the groups sidebar on mobile

--- a/app/assets/stylesheets/classes/_groups-pane.sass
+++ b/app/assets/stylesheets/classes/_groups-pane.sass
@@ -25,6 +25,10 @@
       .name
         font-size: 162%
         line-height: 30px
+        height: 30px
+        overflow: hidden
+        text-overflow: ellipsis
+        white-space: nowrap
       .organization-name
         font-size: 90%
       .organization-email-address
